[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "icinfer"
version = "0.1.0"
authors = [{ name = "" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "a lightweight, hardware-agnostic, unified inference engine implementation built from scratch, based on InfiniCore"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4.0",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    "xxhash",
]

[project.urls]
Homepage="https://github.com/InfiniTensor/InfiniLM"

[tool.setuptools.packages.find]
where = ["."]
include = ["icinfer*"]
