[package]
name = "service"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tensor = { path = "../tensor" }
causal-lm = { path = "../causal-lm" }
log.workspace = true
tokio.workspace = true
memmap2.workspace = true
tokeneer = "0.0"
lru = "0.12"
rangemap = "1.5"

[dev-dependencies]
colored = "2.1"
llama-cpu = { path = "../models/llama/common-cpu" }
