[package]
name = "tensor"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.13"
nalgebra = "0.32"
digit-layout.workspace = true
operators = { workspace = true, features = ["common-cpu"] }
half.workspace = true
