[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true

[dependencies]
llama-cu.path = "../llama.cu"
clap = { version = "4.5", features = ["derive"] }
regex.workspace = true

log.workspace = true
flexi_logger = "0.30"
colored = "3.0"

crossterm = "0.29"
ratatui = "0.29"

serde.workspace = true
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.45", features = ["rt-multi-thread", "net"] }
hyper = { version = "1.6", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["http1", "tokio", "server"] }
http-body-util = "0.1"
tokio-stream = "0.1"
openai-struct = { git = "https://github.com/YdrMaster/openai-struct", rev = "13f73ab" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["stream"] }
