[package]
name = "common-cn"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
common-devices = { path = "../common" }
tensor = { path = "../../tensor" }
sample = { path = "../../sample" }
digit-layout="0.0"
operators = { workspace = true, features = ["cambricon-mlu"] }

[build-dependencies]
build-script-cfg.workspace = true
search-neuware-tools.workspace = true
bindgen = "0.69"
