[package]
name = "common-cpu"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
common-devices = { path = "../common" }
tensor = { path = "../../tensor" }
operators = { workspace = true, features = ["common-cpu"] }
digit-layout.workspace = true
half.workspace = true
