[package]
name = "llama-cn"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

[dependencies]
common = { path = "../../../common" }
common-cn = { path = "../../../devices/cambricon-mlu" }
causal-lm = { path = "../../../causal-lm" }
llama = { path = "../common" }
digit-layout.workspace = true

[build-dependencies]
build-script-cfg.workspace = true
search-neuware-tools.workspace = true
