[package]
name = "llama-cpu"
version = "0.0.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../../common" }
common-cpu = { path = "../../../devices/common-cpu" }
causal-lm = { path = "../../../causal-lm" }
llama = { path = "../common" }
memmap2.workspace = true
half.workspace = true
