[package]
name = "llama-cuda"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama.path = "../common"
common.workspace = true
log.workspace = true
operators = { workspace = true, features = ["nvidia-gpu", "iluvatar-gpu"] }

[build-dependencies]
build-script-cfg.workspace = true
search-cuda-tools.workspace = true
search-corex-tools.workspace = true

[dev-dependencies]
test-utils = { workspace = true, features = ["llama"] }
gguf.workspace = true
regex.workspace = true

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["rt-multi-thread", "net"] }
hyper = { version = "1.6", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["http1", "tokio", "server"] }
http-body-util = "0.1"
tokio-stream = "0.1"
