[package]
name = "llama-nv"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../../common" }
common-nv = { path = "../../../devices/nvidia-gpu" }
causal-lm = { path = "../../../causal-lm" }
llama = { path = "../common" }
log.workspace = true
half.workspace = true

[build-dependencies]
build-script-cfg.workspace = true
search-cuda-tools.workspace = true
