[package]
name = "llama-nv"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama.path = "../common"
common.workspace = true
log.workspace = true
operators = { workspace = true, features = ["nvidia-gpu", "iluvatar-gpu"] }

[build-dependencies]
build-script-cfg.workspace = true
search-cuda-tools.workspace = true
search-corex-tools.workspace = true

[dev-dependencies]
test-utils = { workspace = true, features = ["llama"] }
gguf.workspace = true
regex.workspace = true
